--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://zarmel-academy-twitter-clone.herokuapp.com/",
+  "proxy": "http://localhost:8000",
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
