--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
       "last 1 safari version"
     ]
   },
+  "homepage" : "https://zarmel-academy-twitter-clone.herokuapp.com/",
+  "proxy" : "8000",
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
